cargo-desugar/tests/ui/local-type-path.out
error[E0433]: failed to resolve: function `check` is not a crate or module
  --> tests/ui/local-type-path.desugared.rs:17:25
   |
17 |         assert_exists::<check::Inner>();
   |                         ^^^^^ function `check` is not a crate or module

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
